2017-11-05  Araki Ken  <arakiken@users.sf.net>

	* vt_model.c: Whether vt_model_get_num_of_filled_rows == 0 or not is not checked
	  in vt_model_resize().

2017-11-05  Araki Ken  <arakiken@users.sf.net>

	* vt_edit.c: vt_edit_resize() moves cursor to the bottom line if cursor position
	  is outside of the screen after resizing.

	* vt_model.c: vt_mode_get_num_of_filled_rows() uses
	  vt_line_get_num_of_filled_chars_except_spaces() instead of vt_line_is_empty().

	* im_skk.c:
	  - cand_screen -> status_screen
	  - start_candidate is added to struct im_skk.

2017-11-05  Araki Ken  <arakiken@users.sf.net>

	* vt_screen.c: change_edit() changes screen->main_edit correctly.

	* vt_parser.c: vt_set_pty_winsize() is called in processing DECSSDT.

2017-11-04  Araki Ken  <arakiken@users.sf.net>

	* ControlSequences: Updated.

	* MLTermPty.c:
	  If vt_term_has_status_line() is true, window_scroll_upward_region() does nothing.

	* ui_picture.c: vt_term_get_rows() is placed before for(;;) instead of inside for(;;).

	* ui_screen.c:
	  - screen_height() considers if status line is shown or not.
	  - xterm_resize() converts 0 width or height to current width or height.
	  - xterm_get_window_size() returns window size excluding status line.

	* vt_term.h: vt_term_has_status_line() is added.

	* vt_parser.c:
	  - DECSSDT and DECSASD are supported.
	  - "CSI 4 t", "CSI 8 t", "CSI 14 t" and "CSI 18 t" ignores the height of status line.
	  - "CSI 4 t" and "CSI 8 t" allow omission of the third parameter.
	  - CPR, XCPR and DECCIR reports relative position if DECOM is set.
	  - DECSDM never considers DECOM.

	* vt_screen.c:
	  - vt_screen_has_status_line(), vt_screen_set_use_status_line(),
	    vt_status_line_is_focused(), vt_focus_status_line() and vt_focus_main_screen()
	    are added.
	  - Functions whose return values are not used return void.
	  - vt_screen_cursor_logical_{col|row}() are addded, and
	    vt_screen_cursor_relative_{col|row}() are removed.